--- a/platform/msvc/projects/shaderlab.vcxproj.filters
+++ b/platform/msvc/projects/shaderlab.vcxproj.filters
@@ -31,6 +31,9 @@
     <Filter Include="tools\trans">
       <UniqueIdentifier>{ab3d4f85-a706-46cd-be0c-ec266832c277}</UniqueIdentifier>
     </Filter>
+    <Filter Include="view\preview\viewer">
+      <UniqueIdentifier>{9736a741-2e44-4ddc-83ca-04e1cb2aebbb}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\include\shaderlab\Node.h">
@@ -79,6 +82,12 @@
     <ClInclude Include="..\..\..\include\shaderlab\ShaderAdapter.h">
       <Filter>tools\trans</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\include\shaderlab\ImageViewer.h">
+      <Filter>view\preview\viewer</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\include\shaderlab\HeightViewer.h">
+      <Filter>view\preview\viewer</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\..\source\Node.cpp">
@@ -108,6 +117,12 @@
     </ClCompile>
     <ClCompile Include="..\..\..\source\ShaderAdapter.cpp">
       <Filter>tools\trans</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\source\ImageViewer.cpp">
+      <Filter>view\preview\viewer</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\source\HeightViewer.cpp">
+      <Filter>view\preview\viewer</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
