--- a/platform/msvc/projects/shaderlab.vcxproj
+++ b/platform/msvc/projects/shaderlab.vcxproj
@@ -16,6 +16,7 @@
     <ClInclude Include="..\..\..\include\shaderlab\ImageViewer.h" />
     <ClInclude Include="..\..\..\include\shaderlab\MessageID.h" />
     <ClInclude Include="..\..\..\include\shaderlab\Node.h" />
+    <ClInclude Include="..\..\..\include\shaderlab\node\CustomBlock.h" />
     <ClInclude Include="..\..\..\include\shaderlab\node_def_gen.h" />
     <ClInclude Include="..\..\..\include\shaderlab\node_regist_cfg.h" />
     <ClInclude Include="..\..\..\include\shaderlab\node_rttr_gen.h" />
