--- a/platform/msvc/projects/shaderlab-test.vcxproj
+++ b/platform/msvc/projects/shaderlab-test.vcxproj
@@ -151,7 +151,7 @@
     <ClCompile Include="..\..\..\test\test.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectName>1.shaderlab-test</ProjectName>
+    <ProjectName>shaderlab-test</ProjectName>
     <ProjectGuid>{560AEA65-967A-4D7D-A1D2-A6F21D8AAE3D}</ProjectGuid>
     <RootNamespace>shaderlab-test</RootNamespace>
     <Keyword>Win32Proj</Keyword>
