--- a/platform/msvc/projects/shaderlab.vcxproj
+++ b/platform/msvc/projects/shaderlab.vcxproj
@@ -53,7 +53,7 @@
     <ClCompile Include="..\..\..\source\WxPreviewCanvas.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectName>1.shaderlab</ProjectName>
+    <ProjectName>shaderlab</ProjectName>
     <ProjectGuid>{7EED0027-AE99-415F-B4DA-E51BF361D246}</ProjectGuid>
     <RootNamespace>shaderlab</RootNamespace>
     <Keyword>Win32Proj</Keyword>
