--- a/platform/msvc/projects/shaderlab.vcxproj
+++ b/platform/msvc/projects/shaderlab.vcxproj
@@ -11,6 +11,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\..\include\shaderlab\ConnectPinOP.h" />
     <ClInclude Include="..\..\..\include\shaderlab\Evaluator.h" />
     <ClInclude Include="..\..\..\include\shaderlab\HeightViewer.h" />
     <ClInclude Include="..\..\..\include\shaderlab\ImageViewer.h" />
@@ -18,6 +19,7 @@
     <ClInclude Include="..\..\..\include\shaderlab\Node.h" />
     <ClInclude Include="..\..\..\include\shaderlab\NodePreview.h" />
     <ClInclude Include="..\..\..\include\shaderlab\node\CustomBlock.h" />
+    <ClInclude Include="..\..\..\include\shaderlab\node\SubGraph.h" />
     <ClInclude Include="..\..\..\include\shaderlab\node\Texture2DAsset.h" />
     <ClInclude Include="..\..\..\include\shaderlab\node_def_gen.h" />
     <ClInclude Include="..\..\..\include\shaderlab\node_regist_cfg.h" />
@@ -36,15 +38,20 @@
     <ClInclude Include="..\..\..\include\shaderlab\WxPreviewCanvas.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\..\source\ConnectPinOP.cpp" />
     <ClCompile Include="..\..\..\source\Evaluator.cpp" />
     <ClCompile Include="..\..\..\source\HeightViewer.cpp" />
     <ClCompile Include="..\..\..\source\ImageViewer.cpp" />
     <ClCompile Include="..\..\..\source\Node.cpp" />
     <ClCompile Include="..\..\..\source\NodePreview.cpp" />
+    <ClCompile Include="..\..\..\source\node\SubGraph.cpp" />
     <ClCompile Include="..\..\..\source\node\Texture2DAsset.cpp" />
     <ClCompile Include="..\..\..\source\PinCallback.cpp" />
     <ClCompile Include="..\..\..\source\PreviewPage.cpp" />
-    <ClCompile Include="..\..\..\source\RegistNodes.cpp" />
+    <ClCompile Include="..\..\..\source\RegistNodes.cpp">
+      <AdditionalOptions Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">/bigobj %(AdditionalOptions)</AdditionalOptions>
+      <AdditionalOptions Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">/bigobj %(AdditionalOptions)</AdditionalOptions>
+    </ClCompile>
     <ClCompile Include="..\..\..\source\ShaderAdapter.cpp" />
     <ClCompile Include="..\..\..\source\ShaderLab.cpp" />
     <ClCompile Include="..\..\..\source\WxDefaultProperty.cpp" />
@@ -95,7 +102,7 @@
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <Optimization>Disabled</Optimization>
-      <AdditionalIncludeDirectories>..\..\..\include;..\..\..\..\cu\src;..\..\..\..\sm\src\sm;..\..\..\..\guard\include;..\..\..\..\cpputil\include;..\..\..\..\unirender\include;..\..\..\..\painting0\include;..\..\..\..\painting2\include;..\..\..\..\painting3\include;..\..\..\..\primitive\include;..\..\..\..\geoshape\include;..\..\..\..\dag\include;..\..\..\..\facade\include;..\..\..\..\js\include;..\..\..\..\renderpipeline\include;..\..\..\..\blueprint\include;..\..\..\..\shadergraph\include;..\..\..\..\node0\include;..\..\..\..\node2\include;..\..\..\..\easyeditor0\include;..\..\..\..\easyeditor2\include;..\..\..\..\easyeditor3\include;..\..\..\..\external\rttr\include;..\..\..\..\external\rapidjson\include;..\..\..\..\external\boost\include;..\..\..\..\external-editor\wx\include;</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\..\..\include;..\..\..\..\cu\src;..\..\..\..\sm\src\sm;..\..\..\..\guard\include;..\..\..\..\cpputil\include;..\..\..\..\unirender\include;..\..\..\..\painting0\include;..\..\..\..\painting2\include;..\..\..\..\painting3\include;..\..\..\..\primitive\include;..\..\..\..\geoshape\include;..\..\..\..\dag\include;..\..\..\..\facade\include;..\..\..\..\nserializer\include;..\..\..\..\js\include;..\..\..\..\renderpipeline\include;..\..\..\..\blueprint\include;..\..\..\..\shadergraph\include;..\..\..\..\node0\include;..\..\..\..\node2\include;..\..\..\..\easyeditor0\include;..\..\..\..\easyeditor2\include;..\..\..\..\easyeditor3\include;..\..\..\..\external\rttr\include;..\..\..\..\external\rapidjson\include;..\..\..\..\external\boost\include;..\..\..\..\external-editor\wx\include;</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>WIN32;_DEBUG;_LIB;_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <MinimalRebuild>true</MinimalRebuild>
       <BasicRuntimeChecks>EnableFastChecks</BasicRuntimeChecks>
@@ -109,7 +116,7 @@
     <ClCompile>
       <Optimization>MaxSpeed</Optimization>
       <IntrinsicFunctions>true</IntrinsicFunctions>
-      <AdditionalIncludeDirectories>..\..\..\include;..\..\..\..\cu\src;..\..\..\..\sm\src\sm;..\..\..\..\guard\include;..\..\..\..\cpputil\include;..\..\..\..\unirender\include;..\..\..\..\painting0\include;..\..\..\..\painting2\include;..\..\..\..\painting3\include;..\..\..\..\primitive\include;..\..\..\..\geoshape\include;..\..\..\..\dag\include;..\..\..\..\facade\include;..\..\..\..\js\include;..\..\..\..\renderpipeline\include;..\..\..\..\blueprint\include;..\..\..\..\shadergraph\include;..\..\..\..\node0\include;..\..\..\..\node2\include;..\..\..\..\easyeditor0\include;..\..\..\..\easyeditor2\include;..\..\..\..\easyeditor3\include;..\..\..\..\external\rttr\include;..\..\..\..\external\rapidjson\include;..\..\..\..\external\boost\include;..\..\..\..\external-editor\wx\include;</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\..\..\include;..\..\..\..\cu\src;..\..\..\..\sm\src\sm;..\..\..\..\guard\include;..\..\..\..\cpputil\include;..\..\..\..\unirender\include;..\..\..\..\painting0\include;..\..\..\..\painting2\include;..\..\..\..\painting3\include;..\..\..\..\primitive\include;..\..\..\..\geoshape\include;..\..\..\..\dag\include;..\..\..\..\facade\include;..\..\..\..\nserializer\include;..\..\..\..\js\include;..\..\..\..\renderpipeline\include;..\..\..\..\blueprint\include;..\..\..\..\shadergraph\include;..\..\..\..\node0\include;..\..\..\..\node2\include;..\..\..\..\easyeditor0\include;..\..\..\..\easyeditor2\include;..\..\..\..\easyeditor3\include;..\..\..\..\external\rttr\include;..\..\..\..\external\rapidjson\include;..\..\..\..\external\boost\include;..\..\..\..\external-editor\wx\include;</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>WIN32;NDEBUG;_LIB;_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
       <FunctionLevelLinking>true</FunctionLevelLinking>
