--- a/platform/msvc/projects/shaderlab.vcxproj.filters
+++ b/platform/msvc/projects/shaderlab.vcxproj.filters
@@ -31,9 +31,6 @@
     <Filter Include="tools\trans">
       <UniqueIdentifier>{ab3d4f85-a706-46cd-be0c-ec266832c277}</UniqueIdentifier>
     </Filter>
-    <Filter Include="view\preview\viewer">
-      <UniqueIdentifier>{9736a741-2e44-4ddc-83ca-04e1cb2aebbb}</UniqueIdentifier>
-    </Filter>
     <Filter Include="view\toolbar">
       <UniqueIdentifier>{a7d60cef-8c19-4cfb-ae82-ad3253371a70}</UniqueIdentifier>
     </Filter>
@@ -88,15 +85,6 @@
     <ClInclude Include="..\..\..\include\shaderlab\ShaderAdapter.h">
       <Filter>tools\trans</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\include\shaderlab\ImageViewer.h">
-      <Filter>view\preview\viewer</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\include\shaderlab\HeightViewer.h">
-      <Filter>view\preview\viewer</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\include\shaderlab\PreviewViewer.h">
-      <Filter>view\preview</Filter>
-    </ClInclude>
     <ClInclude Include="..\..\..\include\shaderlab\WxDefaultProperty.h">
       <Filter>view\toolbar</Filter>
     </ClInclude>
@@ -118,8 +106,8 @@
     <ClInclude Include="..\..\..\include\shaderlab\ReflectPropTypes.h">
       <Filter>tools\rtti</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\include\shaderlab\ModelViewer.h">
-      <Filter>view\preview\viewer</Filter>
+    <ClInclude Include="..\..\..\include\shaderlab\PreviewViewer.h">
+      <Filter>view\preview</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -151,12 +139,6 @@
     <ClCompile Include="..\..\..\source\ShaderAdapter.cpp">
       <Filter>tools\trans</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\source\ImageViewer.cpp">
-      <Filter>view\preview\viewer</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\source\HeightViewer.cpp">
-      <Filter>view\preview\viewer</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\..\source\WxDefaultProperty.cpp">
       <Filter>view\toolbar</Filter>
     </ClCompile>
@@ -178,8 +160,8 @@
     <ClCompile Include="..\..\..\source\ReflectPropTypes.cpp">
       <Filter>tools\rtti</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\source\ModelViewer.cpp">
-      <Filter>view\preview\viewer</Filter>
+    <ClCompile Include="..\..\..\source\PreviewViewer.cpp">
+      <Filter>view\preview</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
